# rss2wallabag

./: .gitignore  LICENSE  README.md  add.py  config.example.yaml  delete.py  github_stars.py  golem_top.py  main.py  pyproject.toml  requirements.txt  sites.example.yaml
api/: __init__.py  api.py
