[tool.poetry]
name = "rss2wallabag"
version = "0.1.0"
description = ""
authors = ["Lukas Winkler <git@lw1.at>"]

[tool.poetry.dependencies]
python = "^3.7"
wallabag-api = "^1.2.3"
feedparser = "^5.2.1"
PyYAML = "^5.3"
requests = "^2.22.0"
sentry-sdk = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
